[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/grass.png" type="Texture" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]

[node name="MainScene" type="Node2D"]
script = ExtResource( 4 )
Coin = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 480.0
margin_bottom = 720.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
speed = 200

[node name="CoinContainer" type="Node" parent="."]

[node name="PlayerStart" type="Position2D" parent="."]

[node name="GameTimer" type="Timer" parent="."]

[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="pickup" from="Player" to="." method="_on_Player_pickup"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
